...
                style = MaterialTheme.typography.titleLarge,
                fontWeight = FontWeight.Bold,
            )
        },
        actions = {
            Text(
                text = "로그아웃",
                modifier =
                Modifier
                    .clickable { navigateToOnBoarding() }
                    .padding(end = 10.dp),
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.Bold,
...
